Add Dark Privacy Policy

--- a/app/src/main/assets/privacy_policy_dark.html
+++ b/app/src/main/assets/privacy_policy_dark.html
@@ -7,11 +7,11 @@
                 content="width=device-width">
         <title>Privacy Policy</title>
         <style>
-            body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em; background-color: #FAFAFA;}
-            h2{color: #000000;}
-            p{color: #000000;}
-            li{color: #000000;}
-            a{color: #7D336D;}
+            body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; padding:1em; background-color: #1E1E1E;}
+            h2{color: #E1E1E1;}
+            p{color: #A4A4A4;}
+            li{color: #A4A4A4;}
+            a{color: #9F2184;}
         </style>
     </head>
     <body>
