Update policy colors

--- a/app/src/main/assets/privacy_policy_dark.html
+++ b/app/src/main/assets/privacy_policy_dark.html
@@ -11,7 +11,7 @@
             h2{color: #E1E1E1;}
             p{color: #A4A4A4;}
             li{color: #A4A4A4;}
-            a{color: #9F2184;}
+            a{color: #F2CA8D;}
         </style>
     </head>
     <body>
